Fix layout issue on smaller screens

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding: 0 1em;
 }
 
 img, video {
